--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "karma start --browser PhantomJS --single-run",
-    "test-watch": "karma start"
+    "test-watch": "karma start",
+    "build": "browserify -r ./index.js -s mailto | uglifyjs > ./dist/mailto.min.js"
   },
   "repository": {
     "type": "git",
@@ -39,6 +40,7 @@
     "karma-phantomjs-launcher": "~0.1.0",
     "karma": "~0.10.4",
     "chai": "~1.8.1",
-    "karma-browserify": "0.0.5"
+    "karma-browserify": "0.0.5",
+    "uglify-js": "~2.4.3"
   }
 }
